--- a/env/includes/settings/tk-multi-loader2.yml
+++ b/env/includes/settings/tk-multi-loader2.yml
@@ -101,6 +101,7 @@ settings.tk-multi-loader2.maya:
     Photoshop Image: [texture_node, image_plane]
     Rendered Image: [texture_node, image_plane]
     Texture: [texture_node, image_plane]
+    Hiero Plate: [read_node]
   entities:
   - caption: Assets
     entity_type: Asset
@@ -161,6 +162,7 @@ settings.tk-multi-loader2.nukestudio.project:
     Image: [clip_import]
     Movie: [clip_import]
     Rendered Image: [clip_import]
+    Hiero Plate: [read_node]
   entities:
   - caption: Assets
     entity_type: Asset
