--- a/env/shot_step.yml
+++ b/env/shot_step.yml
@@ -23,6 +23,7 @@ includes:
 - ./includes/settings/tk-photoshopcc.yml
 - ./includes/settings/tk-shell.yml
 - ./includes/settings/tk-shotgun.yml
+- ./includes/settings/tk-mari.yml
 
 ################################################################################
 # configuration for all engines to load in a shot step context
@@ -38,6 +39,7 @@ engines:
   tk-photoshopcc: "@settings.tk-photoshopcc.shot_step"
   tk-shell: "@settings.tk-shell.shot_step"
   tk-shotgun: "@settings.tk-shotgun.shot_step"
+  tk-mari: "@settings.tk-shotgun.shot_step"
 
 ################################################################################
 # reference all of the common frameworks
