--- a/env/includes/settings/tk-multi-loader2.yml
+++ b/env/includes/settings/tk-multi-loader2.yml
@@ -101,7 +101,7 @@ settings.tk-multi-loader2.maya:
     Photoshop Image: [texture_node, image_plane]
     Rendered Image: [texture_node, image_plane]
     Texture: [texture_node, image_plane]
-    Hiero Plate: [read_node]
+    Hiero Plate: [texture_node, image_plane]
   entities:
   - caption: Assets
     entity_type: Asset
