--- a/env/includes/settings/tk-mari.yml
+++ b/env/includes/settings/tk-mari.yml
@@ -53,3 +53,26 @@ settings.tk-mari.project:
     tk-multi-shotgunpanel: "@settings.tk-multi-shotgunpanel"
     tk-multi-workfiles: "@settings.tk-multi-workfiles.mari"
   location: "@engines.tk-mari.location"
+
+# shot
+settings.tk-mari.shot:
+  apps:
+    tk-multi-about:
+      location: "@apps.tk-multi-about.location"
+    tk-multi-shotgunpanel: "@settings.tk-multi-shotgunpanel"
+    tk-multi-workfiles: "@settings.tk-multi-workfiles.mari"
+  location: "@engines.tk-mari.location"
+
+# shot_step
+settings.tk-mari.shot_step:
+  apps:
+    tk-multi-about:
+      location: "@apps.tk-multi-about.location"
+    tk-multi-breakdown:
+      location: "@apps.tk-multi-breakdown.location"
+    tk-multi-loader2: "@settings.tk-multi-loader2.mari"
+    tk-multi-publish2: "@settings.tk-multi-publish2.mari.shot_step"
+    tk-multi-shotgunpanel: "@settings.tk-multi-shotgunpanel"
+    tk-multi-workfiles: "@settings.tk-multi-workfiles.mari"
+    tk-mari-projectmanager: "@settings.tk-mari-projectmanager"
+  location: "@engines.tk-mari.location"
