--- a/env/includes/settings/tk-multi-publish2.yml
+++ b/env/includes/settings/tk-multi-publish2.yml
@@ -158,6 +158,23 @@ settings.tk-multi-publish2.mari.asset_step:
   help_url: *help_url
   location: "@apps.tk-multi-publish2.location"
 
+# shot_step
+settings.tk-multi-publish2.mari.shot_step:
+  collector: "{self}/collector.py:{engine}/tk-multi-publish2/basic/collector.py"
+  publish_plugins:
+  - name: Publish to Shotgun
+    hook: "{self}/publish_file.py"
+    settings: {}
+  - name: Publish to Shotgun
+    hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_mari_textures.py"
+    settings:
+      Publish Template: shot_mari_texture_tif
+  - name: Upload for review
+    hook: "{self}/upload_version.py"
+    settings: {}
+  help_url: *help_url
+  location: "@apps.tk-multi-publish2.location"
+
 ################################################################################
 
 # ---- Maya
@@ -372,7 +389,7 @@ settings.tk-multi-publish2.motion_builder.asset_step:
     settings: {}
   - name: Publish to Shotgun
     hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session.py"
-    settings: 
+    settings:
       Publish Template: mobu_asset_publish
   help_url: *help_url
   location: "@apps.tk-multi-publish2.location"
@@ -394,9 +411,7 @@ settings.tk-multi-publish2.motion_builder.shot_step:
     settings: {}
   - name: Publish to Shotgun
     hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session.py"
-    settings: 
+    settings:
       Publish Template: mobu_shot_publish
   help_url: *help_url
   location: "@apps.tk-multi-publish2.location"
-
-
