--- a/env/includes/software_paths.yml
+++ b/env/includes/software_paths.yml
@@ -17,7 +17,7 @@
 # Mari
 path.linux.mari: 'Mari3.3'
 path.mac.mari: '/Applications/Mari3.3v1/Mari3.3v1.app'
-path.windows.mari: 'C:\Program Files\Mari3.3v1\Bundle\bin\Mari3.3v1.exe'
+path.windows.mari: 'C:\Program Files\Mari3.0v2\Bundle\bin\Mari3.0v2'
 
 # Motionbuilder
 path.windows.motionbuilder: 'C:\Program Files\Autodesk\MotionBuilder 2018\bin\x64\motionbuilder.exe'
