[step_project] Add Flame support

--- a/env/includes/settings/tk-flame.yml
+++ b/env/includes/settings/tk-flame.yml
@@ -15,6 +15,7 @@ includes:
 - ../app_locations.yml
 - ../engine_locations.yml
 - ./tk-flame-export.yml
+- ./tk-multi-loader2.yml
 
 ################################################################################
 
@@ -24,7 +25,11 @@ settings.tk-flame.project:
     tk-flame-review:
       location: "@apps.tk-flame-review.location"
     tk-flame-export: "@settings.tk-flame-export"
+    tk-multi-loader2: "@settings.tk-multi-loader2.flame"
   location: "@engines.tk-flame.location"
+  context_menu: [
+    { name : "Load...", app_instance: "tk-multi-loader2", display_name: "Shotgun Loader..."}
+  ]
 
 # shot
 settings.tk-flame.shot:
